--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-	"appId": "io.ionic.starter",
+	"appId": "com.efada.dalel",
 	"appName": "dalel",
 	"webDir": "www",
 	"bundledWebRuntime": false
