--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ionic/angular": "^6.0.0",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
+    "moment": "^2.29.1",
     "rxjs": "~6.6.0",
     "swiper": "^8.0.6",
     "tslib": "^2.2.0",
