--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "@ionic/angular": "^6.0.0",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
+    "ion2-calendar": "^3.0.0-rc.0",
+    "ion2-code-calendar": "^0.0.7",
+    "ion4-calendar": "^3.0.4-beta.17",
     "moment": "^2.29.1",
     "rxjs": "~6.6.0",
     "swiper": "^8.0.6",
