--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -31,6 +31,10 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>need to get location</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>need to get location</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
