integration code + register

--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -7,9 +7,8 @@
 		"SplashScreen": {
 			"launchShowDuration": 5000,
 			"launchAutoHide": true,
-			"androidScaleType": "CENTER_CROP",
 			"androidSplashResourceName": "splash",
-			"splashFullScreen": false,
+			"splashFullScreen": true,
 			"splashImmersive": false
 		}
 	},
