--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@capacitor/haptics": "1.1.4",
     "@capacitor/ios": "^3.4.3",
     "@capacitor/keyboard": "1.2.2",
+    "@capacitor/network": "^1.0.7",
     "@capacitor/status-bar": "1.0.8",
     "@capacitor/storage": "^1.2.4",
     "@capacitor/toast": "^1.0.8",
