--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@ngx-translate/http-loader": "^7.0.0",
     "ion2-calendar": "^3.0.0-rc.0",
     "moment": "^2.29.1",
+    "ng-otp-input": "^1.8.5",
     "rxjs": "~6.6.0",
     "swiper": "^8.0.6",
     "tslib": "^2.2.0",
